# range-cloud-client

./: .gitmodules  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  Config.cmake
src/cloud-client/: CMakeLists.txt
src/cloud-client/doc/: RELEASE_NOTES.txt
src/cloud-client/help/actions/en/: action_application-about.md  action_application-about_qt.html  action_application-about_qt.md  action_application-help.md  action_application-license.html  action_application-license.md  action_application-quit.html  action_application-quit.md  action_application-release_notes.html  action_application-release_notes.md  action_application-settings.html  action_application-settings.md  action_application-update.html  action_application-update.md  action_cloud-manager.html  action_cloud-manager.md  action_cloud-statistics.md  action_index.md
src/cloud-client/help/actions/sk/: action_application-about.html  action_application-about.md  action_application-about_qt.html  action_application-about_qt.md  action_application-help.html  action_application-help.md  action_application-license.html  action_application-license.md  action_application-quit.html  action_application-quit.md  action_application-release_notes.html  action_application-release_notes.md  action_application-settings.html  action_application-settings.md  action_application-update.html  action_application-update.md  action_cloud-manager.html  action_cloud-manager.md  action_cloud-statistics.html  action_cloud-statistics.md  action_index.md
src/cloud-client/help/general/en/: cloud_client.html  index.json  index.md
src/cloud-client/help/general/sk/: cloud_client.md  index.md
src/cloud-client/help/tutorials/en/: tutorial-Cloud_user_registration.md
src/cloud-client/help/tutorials/sk/: index.json
src/cloud-client/pixmaps/: range-cloud-client.icns
src/cloud-client/src/: action.cpp  action.h  application.cpp  application.h  central_widget.cpp  central_widget.h  cloud_actions_tree.cpp  cloud_actions_tree.h  cloud_auth_token_manager_dialog.cpp  cloud_auth_token_manager_dialog.h  cloud_auth_token_manager_widget.cpp  cloud_auth_token_manager_widget.h  cloud_file_quota_dialog.cpp  cloud_file_quota_dialog.h  cloud_group_add_dialog.cpp  cloud_group_add_dialog.h  cloud_groups_tree.cpp  cloud_groups_tree.h  cloud_process_execute_dialog.cpp  cloud_process_execute_dialog.h  cloud_processes_tree.cpp  cloud_processes_tree.h  cloud_session_combo_box.cpp  cloud_session_combo_box.h  cloud_session_list_widget.cpp  cloud_session_list_widget.h  cloud_session_manager_dialog.cpp  cloud_session_manager_dialog.h  cloud_session_manager_widget.cpp  cloud_session_manager_widget.h  cloud_statistics_dialog.cpp  cloud_statistics_dialog.h  cloud_user_add_dialog.cpp  cloud_user_add_dialog.h  cloud_user_groups_dialog.cpp  cloud_user_groups_dialog.h  cloud_user_manager_widget.cpp  cloud_user_manager_widget.h  cloud_users_tree.cpp  cloud_users_tree.h  (+3 more)
src/cloud-client/translations/: en.ts  sk.ts
